tests/expectations/compiler/bugs/unknown_variable_fail.out
Error [ETYC0372005]: Unknown variable `caller`
    --> compiler-test:36:44
     |
  36 |         return (self.caller, finalize_init(caller));
     |                                            ^^^^^^
Error [ETYC0372005]: Unknown variable `account`
    --> compiler-test:53:53
     |
  53 |         let owner_amount: u64 = Mapping::get_or_use(account, caller, 0u64);
     |                                                     ^^^^^^^
Error [ETYC0372005]: Unknown variable `account`
    --> compiler-test:55:22
     |
  55 |         Mapping::set(account, caller, owner_amount + admin_token_amt);
     |                      ^^^^^^^
